# meteorbot-old

./: README.md
bot/: .gitignore  .gitmodules  CMakeLists.txt  Client.h  CommandClient.cpp  CommandClient.h  Dockerfile  README.md  main.cpp  run.sh
meteoraddon/: build.gradle
meteoraddon/src/main/java/com/astatin3/meteorbot/: Addon.java
meteoraddon/src/main/java/com/astatin3/meteorbot/commands/: CommandExample.java
meteoraddon/src/main/java/com/astatin3/meteorbot/hud/: HudExample.java
meteoraddon/src/main/java/com/astatin3/meteorbot/modules/: ModuleExample.java
meteoraddon/src/main/resources/: fabric.mod.json
